--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,32 @@ jobs:
     - name: Test with flake8
       run: |
         python -m flake8
+
+
+  build_and_push_to_docker_hub:
+        name: Push Docker image to Docker Hub
+        runs-on: ubuntu-latest
+        needs: tests
+        steps:
+          - name: Check out the repo
+            uses: actions/checkout@v2
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v1
+          - name: Login to Docker
+            uses: docker/login-action@v1
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+          - name: Push to DockerHub (foodgram_back)
+            uses: docker/build-push-action@v2
+            with:
+              context: backend/
+              push: true
+              tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_back:latest
+
+          - name: Push to DockerHub (foodgram_front)
+            uses: docker/build-push-action@v2
+            with:
+              context: frontend/
+              push: true
+              tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_front:latest
