--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,51 +6,49 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
 
-    - name: Install dependencies
-      run: | 
-        python -m pip install --upgrade pip 
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r backend/requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+          pip install -r backend/requirements.txt
 
-    - name: Test with flake8
-      run: |
-        python -m flake8
-
+      - name: Test with flake8
+        run: |
+          python -m flake8
 
   build_and_push_to_docker_hub:
-        name: Push Docker image to Docker Hub
-        runs-on: ubuntu-latest
-        needs: tests
-        steps:
-          - name: Check out the repo
-            uses: actions/checkout@v2
-          - name: Set up Docker Buildx
-            uses: docker/setup-buildx-action@v1
-          - name: Login to Docker
-            uses: docker/login-action@v1
-            with:
-              username: ${{ secrets.DOCKER_USERNAME }}
-              password: ${{ secrets.DOCKER_PASSWORD }}
-          - name: Push to DockerHub (foodgram_back)
-            uses: docker/build-push-action@v2
-            with:
-              context: backend/
-              push: true
-              tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_back:latest
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub (foodgram_back)
+        uses: docker/build-push-action@v2
+        with:
+          context: backend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_back:latest
 
-          - name: Push to DockerHub (foodgram_front)
-            uses: docker/build-push-action@v2
-            with:
-              context: frontend/
-              push: true
-              tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_front:latest
-
+      - name: Push to DockerHub (foodgram_front)
+        uses: docker/build-push-action@v2
+        with:
+          context: frontend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_front:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -66,7 +64,9 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker-compose stop
-            sudo docker-compose rm web
+            sudo docker-compose rm backend
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_back:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_front:latest
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -75,6 +75,6 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec -T web python manage.py makemigrations
-            sudo docker-compose exec -T web python manage.py migrate
-            sudo docker-compose exec -T web python manage.py collectstatic --no-input
+            sudo docker-compose exec backend python manage.py migrate
+            sudo docker-compose exec backend python manage.py import_csv
+            sudo docker-compose exec backend python manage.py collectstatic --no-input
