--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.2
-black==22.6.0
+black==22.8.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -16,19 +16,29 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
 drf-extra-fields==3.4.0
+flake8==5.0.4
+flake8-broken-line==0.5.0
+flake8-isort==4.2.0
+flake8-plugin-utils==1.3.2
+flake8-return==1.1.3
 gunicorn==20.0.4
 idna==3.3
 importlib-metadata==1.7.0
+isort==5.10.1
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
 mypy-extensions==0.4.3
 oauthlib==3.2.0
 pathspec==0.9.0
+pep8-naming==0.13.2
 Pillow==9.2.0
 platformdirs==2.5.2
 psycopg2-binary==2.8.6
+pycodestyle==2.9.1
 pycparser==2.21
+pyflakes==2.5.0
 PyJWT==2.4.0
 python-dotenv==0.21.0
 python3-openid==3.2.0
