--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,110 +1,48 @@
-# Конфиг для разработки
 version: '3.3'
-services:
 
-  web:
-    build:
-      context: ../backend/
-      dockerfile: Dockerfile
+services:
+  db:
+    image: postgres:latest
+    volumes:
+      - db:/var/lib/postgresql/data/
+    env_file:
+      - .env
+
+  backend:
+    image: caveinfix/foodgram_back:latest
     restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
-      - ../backend/.env
-    volumes:
-      - static_value:/app/django/static/
-      - media_value:/app/django/media/
+      - ./.env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: caveinfix/foodgram_front:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
-      - web
+      - db
 
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/django/static/
-      - media_value:/var/html/django/media/
-
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    restart: always
     depends_on:
+      - backend
       - frontend
 
 volumes:
+  db:
+  result_build:
   static_value:
   media_value:
-
-
-# Конфиг для деплоя
-# version: '3.3'
-
-# services:
-#   db:
-#     image: postgres:latest
-#     volumes:
-#       - db:/var/lib/postgresql/data/
-#     env_file:
-#       - .env
-
-
-#   backend:
-#     image: caveinfix/foodgram_back:latest
-#     restart: always
-#     volumes:
-#       - static_value:/app/static/
-#       - media_value:/app/media/
-#     depends_on:
-#       - db
-#     env_file:
-#       - ./.env
-
-#   frontend:
-#     image: caveinfix/foodgram_front:latest
-#     volumes:
-#       - ../frontend/:/app/result_build/
-#     depends_on:
-#       - db
-
-#   # frontend:
-#   #   build:
-#   #     context: ../frontend
-#   #     dockerfile: Dockerfile
-#   #   volumes:
-#   #     - ../frontend/:/app/result_build/
-
-#   nginx:
-#     image: nginx:1.19.3
-#    #network_mode: host
-#     ports:
-#       - "80:80"
-#     # extra_hosts:
-#     #   - "host.docker.internal:host-gateway"
-#     volumes:
-#       # - ./nginx.conf:/etc/nginx/conf.d/default.conf
-#       # - ../frontend/build:/usr/share/nginx/html/
-#       # - ../docs/:/usr/share/nginx/html/api/docs/
-#       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-#       - ../frontend/build:/usr/share/nginx/html/
-#       - ../docs/:/usr/share/nginx/html/api/docs/
-#       - static_value:/var/html/static/
-#       - media_value:/var/html/media/
-#     restart: always
-#     depends_on:
-#       - backend
-#       - frontend
-
-# volumes:
-#   db:
-#   result_build:
-#   static_value:
-#   media_value:
