--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,20 +1,29 @@
-# Конфиг для разработки
-server { 
+server {
     listen 80;
-    server_name 127.0.0.1;
     server_tokens off;
+    server_name 51.250.18.244 fgram.ddns.net;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    #Для разработки настройка linux
-    location /api {
-    proxy_pass http://host.docker.internal:5000;
-    proxy_set_header        Host $host;
-    proxy_set_header        X-Real-IP $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header        X-Forwarded-Proto $scheme;
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
+    location /admin/ {
+        proxy_pass   http://backend:8000/admin/;
+    }
+    location /media/ {
+        root /var/html;
+    }
+    location /static/admin/ {
+        root /var/html;
+    }
+    location /static/rest_framework/ {
+        root /var/html/;
     }
     location / {
         root /usr/share/nginx/html;
@@ -29,55 +38,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
-    location /django/media/ {
-        root /var/html/;
-    }
-
-    location /django/static/ {
-        root /var/html/;
-    }
 }
-
-# Конфиг для deploy
-# server {
-#     listen 80;
-#     server_name 51.250.18.244;
-#     server_tokens off;
-
-#     location /api/docs/ {
-#         root /usr/share/nginx/html;
-#         try_files $uri $uri/redoc.html;
-#     }
-#     location /api/ {
-#         proxy_set_header        Host $host;
-#         proxy_set_header        X-Forwarded-Host $host;
-#         proxy_set_header        X-Forwarded-Server $host;
-#         proxy_pass http://backend:8000;
-#     }
-#     location /admin/ {
-#         proxy_pass   http://backend:8000/admin/;
-#     }
-#     location /media/ {
-#         root /var/html;
-#     }
-#     location /static/admin/ {
-#         root /var/html;
-#     }
-#     location /static/rest_framework/ {
-#         root /var/html/;
-#     }
-#     location / {
-#         root /usr/share/nginx/html;
-#         index  index.html index.htm;
-#         try_files $uri /index.html;
-#         proxy_set_header        Host $host;
-#         proxy_set_header        X-Real-IP $remote_addr;
-#         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header        X-Forwarded-Proto $scheme;
-#       }
-#       error_page   500 502 503 504  /50x.html;
-#       location = /50x.html {
-#         root   /var/html/frontend/;
-#       }
-# }
