--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,30 +1,30 @@
 server {
     listen 80;
-    server_tokens off;
     server_name 51.250.18.244 fgram.ddns.net;
+    server_tokens off;
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
+    location /media/ {
+        root /var/html/;
+    }
+    location /static/rest_framework/ {
+        root /var/html/;
     }
     location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/api/;
     }
     location /admin/ {
-        proxy_pass   http://backend:8000/admin/;
-    }
-    location /media/ {
-        root /var/html;
-    }
-    location /static/admin/ {
-        root /var/html;
-    }
-    location /static/rest_framework/ {
-        root /var/html/;
-    }
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/admin/;
+    } 
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }    
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
