--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - backend
 
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
@@ -45,4 +45,3 @@ volumes:
   postgres:
   static_value:
   media_value:
-  
