--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,47 +1,52 @@
+# Конфиг для разработки
 version: '3.3'
 services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - postgres:/var/lib/postgresql/data/
+      - db:/var/lib/postgresql/data/
     env_file:
       - ./.env
 
-  backend:
-    image: caveinfix/foodgram_back:latest
+  web:
+    build:
+      context: ../backend/
+      dockerfile: Dockerfile
     restart: always
-    volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
     depends_on:
       - db
     env_file:
-      - ./.env
+      - ../backend/.env
+    volumes:
+      - static_value:/app/django/static/
+      - media_value:/app/django/media/
 
   frontend:
-    image: caveinfix/foodgram_front:latest
-    restart: always
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
-      - backend
+      - web
 
   nginx:
-    image: nginx:1.21.3-alpine
+    image: nginx:1.19.3
     ports:
       - "80:80"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - static_value:/var/html/django/static/
+      - media_value:/var/html/django/media/
+
     depends_on:
-      - db
-      - backend
       - frontend
 
 volumes:
-  postgres:
+  db:
   static_value:
   media_value:
