--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,30 +1,21 @@
-server {
+# Конфиг для разработки
+server { 
     listen 80;
-    server_name 51.250.18.244 fgram.ddns.net;
+    server_name 127.0.0.1;
     server_tokens off;
 
-    location /media/ {
-        root /var/html/;
-    }
-    location /static/rest_framework/ {
-        root /var/html/;
-    }
-    location /api/ {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000/api/;
-    }
-    location /admin/ {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000/admin/;
-    } 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
-    }    
+    }
+    #Для разработки настройка linux
+    location /api {
+    proxy_pass http://host.docker.internal:5000;
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -38,4 +29,12 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
+    location /django/media/ {
+        root /var/html/;
+    }
+
+    location /django/static/ {
+        root /var/html/;
+    }
 }
